Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -1,81 +1,69 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Archives | The Wrong Stuff</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Archives | The Wrong Stuff</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-	      <link rel="alternate" type="application/atom+xml" href="/atom.xml" title="The Wrong Stuff Atom Feed">
+          <link rel="alternate" type="application/atom+xml" href="/atom.xml" title="The Wrong Stuff Atom Feed">
 
-	<script src="//use.typekit.net/vrr2fgk.js"></script>
-	<script>try{Typekit.load();}catch(e){}</script>
+    <script src="//use.typekit.net/vrr2fgk.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
 
-	<link rel="stylesheet" href="http://chriserickson.me/theme/css/site.min.css?7491b995">
-	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://chriserickson.me/theme/css/site.min.css?54681040">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
 <!-- Navigation -->
 <nav class="navbar navbar-default navbar-static-top transparent">
 	<div class="container">
-		<!-- Brand and toggle get grouped for better mobile display -->
-		<div class="navbar-header page-scroll">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-		</div>
+
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li class="active">
-					<a href="http://chriserickson.me/archives.html">Archives</a>
-				</li>
+				<li class="active"><a href="http://chriserickson.me/archives.html">Archives</a></li>
 			</ul>
 		</div>
 		<!-- /.navbar-collapse -->
 	</div>
 	<!-- /.container -->
 </nav>
+    <!-- Page Header -->
+    <!-- Set your background image for this header on the line below. -->
+    <header>
+        <div class="container-fluid masthead">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div class="site-heading">
+                        <h1><a href="http://chriserickson.me">The Wrong Stuff</a></h1>
+                        <hr class="small">
+                        <span class="subheading">The Right Place for the Wrong Stuff</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 
-
-	<!-- Page Header -->
-	<!-- Set your background image for this header on the line below. -->
-	<header>
-		<div class="container-fluid masthead">
-			<div class="row">
-				<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-					<div class="site-heading">
-						<h1>The Wrong Stuff</h1>
-						<hr class="small">
-						<span class="subheading">The Right Place for the Wrong Stuff</span>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
-
-	<!-- Main Content -->
-	<main>
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+    <!-- Main Content -->
+    <main>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 
 <h2>Archives</h2>
 <p>List of all posts in this blog, ordered by date.</p>
 <dl>
 </dl>
 
-			</div>
-		</div>
-	</div>
+            </div>
+        </div>
+    </div>
 
-	</main>
+    </main>
 
 <!-- Footer -->
 <footer class="blog-footer">
@@ -86,7 +74,7 @@
 					<ul class="list-inline text-center">
 						<li>
 							<a href="https://www.twitter.com/chriserickson">
-								<span class="fa-stack fa-lg">
+								<span class="fa-stack fa-lg social-icon">
 									<i class="fa fa-circle fa-stack-2x"></i>
 									<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
 								</span>
@@ -95,7 +83,7 @@
 
 						<li>
 							<a href="https://github.com/chris-erickson">
-								<span class="fa-stack fa-lg">
+								<span class="fa-stack fa-lg social-icon">
 									<i class="fa fa-circle fa-stack-2x"></i>
 									<i class="fa fa-github fa-stack-1x fa-inverse"></i>
 								</span>
@@ -104,7 +92,7 @@
 
 						<li>
 							<a href="/atom.xml">
-								<span class="fa-stack fa-lg">
+								<span class="fa-stack fa-lg social-icon">
 									<i class="fa fa-circle fa-stack-2x"></i>
 									<i class="fa fa-rss fa-stack-1x fa-inverse"></i>
 								</span>
@@ -117,7 +105,7 @@
 		</div>
 	</div>
 </footer>
-	<script src="http://chriserickson.me/theme/js/site.min.js?d0cb53b9"></script>
+    <script src="http://chriserickson.me/theme/js/site.min.js?d0cb53b9"></script>
 
 </body>
 </html>
